cmake_minimum_required(VERSION 3.10)

project(ecs)

set(CXX_STANDARD 20)

add_executable(example1 example/example1.cpp)
add_executable(example2 example/example2.cpp)
add_executable(example3 example/example3.cpp)
add_executable(example4 example/example4.cpp)
add_executable(example5 example/example5.cpp)
